--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -67,6 +67,7 @@ windowrulev2 = stayfocused, class:^([Ww]ofi)$
 # windowrulev2 = forceinput, class:^([Rr]ofi)$
 # windowrulev2 = forceinput, class:^([Ww]ofi)$
 # layerrule = unset, rofi
+layerrule = blur, logout_dialog
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
 layerrule = blur, wswid
