--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0F1112)
-$backgroundColTransparent = rgba(0F111260)
-$foreground = rgb(FCF5EA)
-$color0 = rgb(3A3B3D)
-$color1 = rgb(AC7360)
-$color2 = rgb(748173)
-$color2_shadow = rgba(748173a0)
-$color3 = rgb(AB8D89)
-$color4 = rgb(A19280)
-$color5 = rgb(B99580)
-$color6 = rgb(B9AA92)
-$color7 = rgb(F3E8D8)
-$color8 = rgb(AAA297)
-$color9 = rgb(DF8F75)
-$color10 = rgb(9BAC9A)
-$color11 = rgb(E4BCB7)
-$color12 = rgb(D7C2AA)
-$color13 = rgb(F7C6AA)
-$color14 = rgb(F7E2C2)
-$color15 = rgb(F3E8D8)
+$background = rgb(0D0F11)
+$backgroundColTransparent = rgba(0D0F1160)
+$foreground = rgb(FFF2DE)
+$color0 = rgb(383A3C)
+$color1 = rgb(B27053)
+$color2 = rgb(B66A5E)
+$color2_shadow = rgba(B66A5Ea0)
+$color3 = rgb(4F8571)
+$color4 = rgb(B48957)
+$color5 = rgb(BA8E72)
+$color6 = rgb(BEA479)
+$color7 = rgb(F6E5C8)
+$color8 = rgb(ACA08C)
+$color9 = rgb(D66A3B)
+$color10 = rgb(E36D5A)
+$color11 = rgb(5DA98D)
+$color12 = rgb(F0B674)
+$color13 = rgb(F8BD98)
+$color14 = rgb(FEDBA1)
+$color15 = rgb(F6E5C8)
