--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FCF5EA
-background         #0F1112
+foreground         #FFF2DE
+background         #0D0F11
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0F1112
-active_tab_background     #FCF5EA
-inactive_tab_foreground   #FCF5EA
-inactive_tab_background   #0F1112
+active_tab_foreground     #0D0F11
+active_tab_background     #FFF2DE
+inactive_tab_foreground   #FFF2DE
+inactive_tab_background   #0D0F11
 
-active_border_color   #FCF5EA
-inactive_border_color #0F1112
-bell_border_color     #AC7360
+active_border_color   #FFF2DE
+inactive_border_color #0D0F11
+bell_border_color     #B27053
 
-color0      #3A3B3D
-color1		#AC7360
-color2		#748173
-color3		#AB8D89
-color4		#A19280
-color5		#B99580
-color6		#B9AA92
-color7		#F3E8D8
-color8		#AAA297
-color9		#DF8F75
-color10		#9BAC9A
-color11		#E4BCB7
-color12		#D7C2AA
-color13		#F7C6AA
-color14		#F7E2C2
-color15		#F3E8D8
+color0      #383A3C
+color1		#B27053
+color2		#B66A5E
+color3		#4F8571
+color4		#B48957
+color5		#BA8E72
+color6		#BEA479
+color7		#F6E5C8
+color8		#ACA08C
+color9		#D66A3B
+color10		#E36D5A
+color11		#5DA98D
+color12		#F0B674
+color13		#F8BD98
+color14		#FEDBA1
+color15		#F6E5C8
