--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#3A3B3D'
-gradient_color_2 = '#748173'
-gradient_color_3 = '#AB8D89'
-gradient_color_4 = '#B99580'
-gradient_color_5 = '#F3E8D8'
-gradient_color_6 = '#D7C2AA'
-gradient_color_7 = '#F7C6AA'
-gradient_color_8 = '#F3E8D8'
+gradient_color_1 = '#383A3C'
+gradient_color_2 = '#B66A5E'
+gradient_color_3 = '#4F8571'
+gradient_color_4 = '#BA8E72'
+gradient_color_5 = '#F6E5C8'
+gradient_color_6 = '#F0B674'
+gradient_color_7 = '#F8BD98'
+gradient_color_8 = '#F6E5C8'
 
 [color]
 
