added new window widget for eww

--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -65,6 +65,8 @@ bind = $mainMod, O, layoutmsg, togglesplit
 # Special Keys / Hot Keys
 bind = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
 bind = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec #volume down
+bind = $mainMod CTRL, Q, exec, $scriptsDir/Volume.sh --inc #volume up
+bind = $mainMod CTRL, A, exec, $scriptsDir/Volume.sh --dec #volume down
 bind = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic #mute mic
 bind = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle
 bind = , xf86Sleep, exec, systemctl suspend  # sleep button 
