--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -28,7 +28,7 @@ exec-once = blueman-applet &
 exec-once = rog-control-center &
 exec-once = eww daemon
 # exec-once = eww open bar --arg mon=0 &
-exec-once = eww open-many wswid sysinfo &
+exec-once = eww open-many wswid sysinfo windows &
 exec-once = $HOME/.config/eww/scripts/openQuickActions.sh
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
