--- a/.config/hypr/UserConfigs/Laptops.conf
+++ b/.config/hypr/UserConfigs/Laptops.conf
@@ -14,6 +14,8 @@ bind = , xf86Launch3, exec, asusctl led-mode -n #FN+F4 Switch keyboard RGB profi
 bind = , xf86Launch4, exec, asusctl profile -n  #FN+F5 change of fan profiles (Quite, Balance, Performance)
 bind = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec 
 bind = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc 
+bind = $mainMod ALT, K, exec, $scriptsDir/Brightness.sh --inc #brightness up
+bind = $mainMod ALT, J, exec, $scriptsDir/Brightness.sh --dec #brightness down
 bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh #disable touchpad
 bind = $mainMod, D, exec, $scriptsDir/TouchPad.sh #disable touchpad
 
