--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -41,6 +41,7 @@ exec-once = fcitx5-remote -r
 #clipboard manager
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = hypridle &
 
 # Rainbow borders
 # exec-once = $UserScripts/RainbowBorders.sh
@@ -53,7 +54,7 @@ exec-once = wl-paste --type image --watch cliphist store
 #exec-once = swayidle -w  timeout 900 'hyprctl dispatch dpms off' resume 'hyprctl dispatch dpms on'
 
 # Here are list of features available but disabled by default
-#exec-once = swww query || swww init && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png  # persistent wallpaper
+# exec-once = swww query || swww init && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png  # persistent wallpaper
 
 #gnome polkit for nixos
 #exec-once = $scriptsDir/Polkit-NixOS.sh
