--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -26,7 +26,7 @@ bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, r
 bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji
 bind = $mainMod SHIFT, B, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # animations ON/OFF
-bind = $mainMod ALT, K, exec, $scriptsDir/SwitchKeyboardLayout.sh # Switch Keyboard Layout
+# bind = $mainMod ALT, K, exec, $scriptsDir/SwitchKeyboardLayout.sh # Switch Keyboard Layout
 bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
 bind = $mainMod ALT, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
 bind = $mainMod SHIFT, N, exec, swaync-client -t -sw # swayNC panel
@@ -65,14 +65,10 @@ bind = $mainMod, O, layoutmsg, togglesplit
 # Special Keys / Hot Keys
 bind = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
 bind = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec #volume down
-bind = $mainMod CTRL, Q, exec, $scriptsDir/Volume.sh --inc #volume up
-bind = $mainMod CTRL, A, exec, $scriptsDir/Volume.sh --dec #volume down
 bind = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic #mute mic
 bind = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle
 bind = , xf86Sleep, exec, systemctl suspend  # sleep button 
 bind = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh #Airplane mode
-bind = $mainMod, -, exec, $scriptDir/Brightness.sh --dec #brightness down
-bind = $mainMod, =, exec, $scriptDir/Brightness.sh --inc #brightness down
 
 # media controls using keyboards
 bind = , xf86AudioPlayPause, exec, $scriptsDir/MediaCtrl.sh --pause
