--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0D0F11)
-$backgroundColTransparent = rgba(0D0F1160)
-$foreground = rgb(FFF2DE)
-$color0 = rgb(383A3C)
-$color1 = rgb(B27053)
-$color2 = rgb(B66A5E)
-$color2_shadow = rgba(B66A5Ea0)
-$color3 = rgb(4F8571)
-$color4 = rgb(B48957)
-$color5 = rgb(BA8E72)
-$color6 = rgb(BEA479)
-$color7 = rgb(F6E5C8)
-$color8 = rgb(ACA08C)
-$color9 = rgb(D66A3B)
-$color10 = rgb(E36D5A)
-$color11 = rgb(5DA98D)
-$color12 = rgb(F0B674)
-$color13 = rgb(F8BD98)
-$color14 = rgb(FEDBA1)
-$color15 = rgb(F6E5C8)
+$background = rgb(0E1014)
+$backgroundColTransparent = rgba(0E101460)
+$foreground = rgb(F5E9E2)
+$color0 = rgb(393A3F)
+$color1 = rgb(4488A3)
+$color2 = rgb(937575)
+$color2_shadow = rgba(937575a0)
+$color3 = rgb(41859C)
+$color4 = rgb(A07571)
+$color5 = rgb(638195)
+$color6 = rgb(AA9081)
+$color7 = rgb(E8D7CD)
+$color8 = rgb(A29790)
+$color9 = rgb(1187B6)
+$color10 = rgb(AC7E7E)
+$color11 = rgb(3BA0C2)
+$color12 = rgb(CE938D)
+$color13 = rgb(84ACC6)
+$color14 = rgb(E2C0AC)
+$color15 = rgb(E8D7CD)
