--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#383A3C'
-gradient_color_2 = '#B66A5E'
-gradient_color_3 = '#4F8571'
-gradient_color_4 = '#BA8E72'
-gradient_color_5 = '#F6E5C8'
-gradient_color_6 = '#F0B674'
-gradient_color_7 = '#F8BD98'
-gradient_color_8 = '#F6E5C8'
+gradient_color_1 = '#393A3F'
+gradient_color_2 = '#937575'
+gradient_color_3 = '#41859C'
+gradient_color_4 = '#638195'
+gradient_color_5 = '#E8D7CD'
+gradient_color_6 = '#CE938D'
+gradient_color_7 = '#84ACC6'
+gradient_color_8 = '#E8D7CD'
 
 [color]
 
