--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -7,7 +7,7 @@
 
 $mainMod = SUPER
 $files = thunar
-$term = kitty
+$term = ghostty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 
@@ -20,19 +20,17 @@ bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files
 
-# User Added Keybinds
-bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
 
-bind = $mainMod alt, 1, exec, hyprctl dispatch moveworkspacetomonitor 1 current && hyprctl dispatch workspace 1
-bind = $mainMod alt, 2, exec, hyprctl dispatch moveworkspacetomonitor 2 current && hyprctl dispatch workspace 2
-bind = $mainMod alt, 3, exec, hyprctl dispatch moveworkspacetomonitor 3 current && hyprctl dispatch workspace 3
-bind = $mainMod alt, 4, exec, hyprctl dispatch moveworkspacetomonitor 4 current && hyprctl dispatch workspace 4
-bind = $mainMod alt, 5, exec, hyprctl dispatch moveworkspacetomonitor 5 current && hyprctl dispatch workspace 5
-bind = $mainMod alt, 6, exec, hyprctl dispatch moveworkspacetomonitor 6 current && hyprctl dispatch workspace 6
-bind = $mainMod alt, 7, exec, hyprctl dispatch moveworkspacetomonitor 7 current && hyprctl dispatch workspace 7
-bind = $mainMod alt, 8, exec, hyprctl dispatch moveworkspacetomonitor 8 current && hyprctl dispatch workspace 8
-bind = $mainMod alt, 9, exec, hyprctl dispatch moveworkspacetomonitor 9 current && hyprctl dispatch workspace 9
-bind = $mainMod alt, 0, exec, hyprctl dispatch moveworkspacetomonitor 10 current && hyprctl dispatch workspace 10
+# bind = $mainMod alt, 1, exec, hyprctl dispatch moveworkspacetomonitor 1 current && hyprctl dispatch workspace 1
+# bind = $mainMod alt, 2, exec, hyprctl dispatch moveworkspacetomonitor 2 current && hyprctl dispatch workspace 2
+# bind = $mainMod alt, 3, exec, hyprctl dispatch moveworkspacetomonitor 3 current && hyprctl dispatch workspace 3
+# bind = $mainMod alt, 4, exec, hyprctl dispatch moveworkspacetomonitor 4 current && hyprctl dispatch workspace 4
+# bind = $mainMod alt, 5, exec, hyprctl dispatch moveworkspacetomonitor 5 current && hyprctl dispatch workspace 5
+# bind = $mainMod alt, 6, exec, hyprctl dispatch moveworkspacetomonitor 6 current && hyprctl dispatch workspace 6
+# bind = $mainMod alt, 7, exec, hyprctl dispatch moveworkspacetomonitor 7 current && hyprctl dispatch workspace 7
+# bind = $mainMod alt, 8, exec, hyprctl dispatch moveworkspacetomonitor 8 current && hyprctl dispatch workspace 8
+# bind = $mainMod alt, 9, exec, hyprctl dispatch moveworkspacetomonitor 9 current && hyprctl dispatch workspace 9
+# bind = $mainMod alt, 0, exec, hyprctl dispatch moveworkspacetomonitor 10 current && hyprctl dispatch workspace 10
 bind = $mainMod alt, W, exec, zen-browser --profile /home/itan/.zen/a8hu3lor.Work
 # For passthrough keyboard into a VM
 # bind = $mainMod ALT, P, submap, passthru
