--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -12,16 +12,21 @@ windowrule = float, eog
 windowrule = float, zoom
 windowrule = float, rofi
 windowrule = float, gnome-system-monitor
+windowrulev2 = float, title:^(Calculator)
 windowrule = float, yad
 windowrule = float, title:^(shader_test)$
 
 windowrule = noblur,gamescope
 windowrule = fullscreen,gamescope
 windowrule = workspace 6 silent,^(gamescope)$
-windowrule=pseudo,fcitx
+windowrule = pseudo,fcitx
 
 windowrule = center,^(pavucontrol) 
 
+windowrulev2 = float, initialTitle:(Discord Popout)
+windowrulev2 = pin, initialTitle:(Discord Popout)
+windowrulev2 = size 35% 35%, initialTitle:(Discord Popout)
+windowrulev2 = move 100%-w-25 100%-w-25, initialTitle:(Discord Popout)
 # windowrule v2
 windowrulev2 = workspace 1, class:^(thunderbird)$
 windowrulev2 = workspace 2, class:^(firefox)$
@@ -60,6 +65,7 @@ windowrulev2 = opacity 0.9 0.7, class:^(yad)$
 windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
 windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
 windowrulev2 = immediate, class:^(osu)$
+windowrulev2 = opacity 1.0 0.3, initialTitle:(Discord Popout)
 
 
 # windowrulev2 = stayfocused, class:^([Rr]ofi)$
