--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,59 +1,281 @@
+#
+# source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
+
+
+# general {
+# 	grace =1
+# }
+#
+# background {
+#     path = $HOME/.config/hypr/.current_wallpaper
+#     blur {
+# 	enabled = true	
+# 	size = 6
+# 	passes = 3
+# 	ignore_opacity = true
+# 	new_optimizations = true
+#     }
+# }
+#
+# label {
+#     monitor =
+#     text = Hi there, $USER
+#     text_align = center # center/right or any value for default left. multi-line text alignment inside label container
+#     color = $foreground
+#     font_size = 80
+#     font_family = Noto Sans
+#     rotate = 0 # degrees, counter-clockwise
+#
+#     position = 0, 80
+#     halign = center
+#     valign = center
+# }
+#
+# input-field {
+#     monitor =
+#     size = 170, 40
+#     outline_thickness = 3
+#     dots_size = 0.33
+#     dots_spacing = 0.15
+#     dots_center = false
+#     dots_rounding = -1
+#     outer_color = $color2
+#     inner_color = $color0
+#     font_color = $foregroundCol
+#     fade_on_empty = false
+#     placeholder_text = <i>password?</i>
+#     hide_input = false
+#     rounding = -1
+#     check_color = rgb(204, 136, 50)
+#     fail_color = rgb(204, 50, 50) 
+#     fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
+#     fail_transition = 150 
+#     capslock_color = -1
+#     numlock_color = -1
+#     bothlock_color = -1
+#
+#     position = 0, -100
+#     halign = center
+#     valign = center
+# }
 
 source = $HOME/.config/hypr/wallust/wallust-hyprland.conf
+$Scripts = $HOME/.config/hypr/scripts
 
 general {
-	grace =1
+    grace = 1
 }
 
 background {
-    path = $HOME/.config/hypr/.current_wallpaper
-    blur {
-	enabled = true	
-	size = 6
-	passes = 3
-	ignore_opacity = true
-	new_optimizations = true
-    }
+    monitor = 
+    # NOTE: use only 1 path
+	#path = screenshot   # screenshot of your desktop
+	# path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_modified   # NOTE only png supported for now
+    #path = $HOME/.config/hypr/wallpaper_effects/.wallpaper_current # current wallpaper
+    
+     path = $HOME/.config/hypr/.current_wallpaper
+    #color = $color7
+
+    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
+    blur_size = 4
+    blur_passes = 5 # 0 disables blurring
+    noise = 0.0117
+    brightness = 0.5000
 }
 
+
+# Date
 label {
-    monitor =
-    text = Hi there, $USER
-    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
-    color = $foreground
-    font_size = 80
-    font_family = Noto Sans
-    rotate = 0 # degrees, counter-clockwise
-
-    position = 0, 80
+    monitor = eDP-2
+    text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B')" </b>"
+    color = $color12
+    font_size = 24
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -200
     halign = center
-    valign = center
+    valign = top
 }
 
-input-field {
-    monitor =
-    size = 170, 40
-    outline_thickness = 3
-    dots_size = 0.33
-    dots_spacing = 0.15
-    dots_center = false
-    dots_rounding = -1
-    outer_color = $color2
-    inner_color = $color0
-    font_color = $foregroundCol
-    fade_on_empty = false
-    placeholder_text = <i>password?</i>
-    hide_input = false
-    rounding = -1
-    check_color = rgb(204, 136, 50)
-    fail_color = rgb(204, 50, 50) 
-    fail_text = <i>$FAIL <b>($ATTEMPTS)</b></i>
-    fail_transition = 150 
-    capslock_color = -1
-    numlock_color = -1
-    bothlock_color = -1
-
-    position = 0, -100
+# Hour-Time
+label {
+    monitor = eDP-2
+    text = cmd[update:1000] echo "$(date +"%H")"
+#    text = cmd[update:1000] echo "$(date +"%I")" #AM/PM
+	#color = rgba(255, 185, 0, .8)
+    color = $color13
+    font_size = 200
+    font_family = JetBrainsMono Nerd Font ExtraBold 
+    position = 0, -250
     halign = center
-    valign = center
+    valign = top
+}
+
+# Minute-Time
+label {
+    monitor = eDP-2
+    text = cmd[update:1000] echo "$(date +"%M")"
+    #color = rgba(15, 10, 222, .8)
+    color = $color12
+    font_size = 200
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -575
+    halign = center
+    valign = top
+}
+
+# Seconds-Time
+label {
+    monitor = eDP-2
+    text = cmd[update:1000] echo "$(date +"%S")"
+#    text = cmd[update:1000] echo "$(date +"%S %p")" #AM/PM
+    color = $color11
+    font_size = 40
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -560
+    halign = center
+    valign = top
+}
+
+# USER
+label {
+    monitor = eDP-2
+    text =     $USER
+    color = $color13
+    outline_thickness = 2
+    font_size = 24
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, 500
+    halign = center
+    valign = bottom
+}
+
+
+# INPUT FIELD
+input-field {
+    monitor = eDP-2
+    size = 300, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = $color11
+    fade_on_empty = false
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    placeholder_text = <i><span foreground="##ffffff99">Type Password</span></i>
+    hide_input = false
+    position = 0, 400
+    halign = center
+    valign = bottom
+}
+
+# uptime
+label {
+    monitor = eDP-2
+    text = cmd[update:60000] echo "<b> "$(uptime -p || $Scripts/UptimeNixOS.sh)" </b>"
+    color = $color13
+    font_size = 18
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, 0
+    halign = right
+    valign = bottom
+}
+
+# Date
+label {
+    monitor = eDP-1
+    text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B')" </b>"
+    color = $color12
+    font_size = 24
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -200
+    halign = center
+    valign = top
+}
+
+# Hour-Time
+label {
+    monitor = eDP-1
+    text = cmd[update:1000] echo "$(date +"%H")"
+#    text = cmd[update:1000] echo "$(date +"%I")" #AM/PM
+	#color = rgba(255, 185, 0, .8)
+    color = $color13
+    font_size = 200
+    font_family = JetBrainsMono Nerd Font ExtraBold 
+    position = 0, -250
+    halign = center
+    valign = top
+}
+
+# Minute-Time
+label {
+    monitor = eDP-1
+    text = cmd[update:1000] echo "$(date +"%M")"
+    #color = rgba(15, 10, 222, .8)
+    color = $color12
+    font_size = 200
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -575
+    halign = center
+    valign = top
+}
+
+# Seconds-Time
+label {
+    monitor = eDP-1
+    text = cmd[update:1000] echo "$(date +"%S")"
+#    text = cmd[update:1000] echo "$(date +"%S %p")" #AM/PM
+    color = $color11
+    font_size = 40
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, -560
+    halign = center
+    valign = top
+}
+
+# USER
+label {
+    monitor = eDP-1
+    text =     $USER
+    color = $color13
+    outline_thickness = 2
+    font_size = 24
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, 500
+    halign = center
+    valign = bottom
+}
+
+
+# INPUT FIELD
+input-field {
+    monitor = eDP-1
+    size = 300, 60
+    outline_thickness = 2
+    dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
+    dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(255, 255, 255, 0.1)
+    font_color = $color11
+    fade_on_empty = false
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    placeholder_text = <i><span foreground="##ffffff99">Type Password</span></i>
+    hide_input = false
+    position = 0, 400
+    halign = center
+    valign = bottom
+}
+
+# uptime
+label {
+    monitor = eDP-1
+    text = cmd[update:60000] echo "<b> "$(uptime -p || $Scripts/UptimeNixOS.sh)" </b>"
+    color = $color13
+    font_size = 18
+    font_family = JetBrainsMono Nerd Font ExtraBold
+    position = 0, 0
+    halign = right
+    valign = bottom
 }
