--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FFF2DE
-background         #0D0F11
+foreground         #F5E9E2
+background         #0E1014
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0D0F11
-active_tab_background     #FFF2DE
-inactive_tab_foreground   #FFF2DE
-inactive_tab_background   #0D0F11
+active_tab_foreground     #0E1014
+active_tab_background     #F5E9E2
+inactive_tab_foreground   #F5E9E2
+inactive_tab_background   #0E1014
 
-active_border_color   #FFF2DE
-inactive_border_color #0D0F11
-bell_border_color     #B27053
+active_border_color   #F5E9E2
+inactive_border_color #0E1014
+bell_border_color     #4488A3
 
-color0      #383A3C
-color1		#B27053
-color2		#B66A5E
-color3		#4F8571
-color4		#B48957
-color5		#BA8E72
-color6		#BEA479
-color7		#F6E5C8
-color8		#ACA08C
-color9		#D66A3B
-color10		#E36D5A
-color11		#5DA98D
-color12		#F0B674
-color13		#F8BD98
-color14		#FEDBA1
-color15		#F6E5C8
+color0      #393A3F
+color1		#4488A3
+color2		#937575
+color3		#41859C
+color4		#A07571
+color5		#638195
+color6		#AA9081
+color7		#E8D7CD
+color8		#A29790
+color9		#1187B6
+color10		#AC7E7E
+color11		#3BA0C2
+color12		#CE938D
+color13		#84ACC6
+color14		#E2C0AC
+color15		#E8D7CD
