--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -50,6 +50,9 @@ swaync.target = '~/.config/swaync/wallust/colors-wallust.css'
 wlogout.template = 'colors-swaync.css'
 wlogout.target = '~/.config/wlogout/wallust/colors-wallust.css'
 
+ghostty.template = 'colors-ghostty'
+ghostty.target = '~/.config/ghostty/themes/wallust'
+
 #macchina.template = 'colors-macchina.toml'
 #macchina.target = '~/.config/macchina/themes/wallust.toml'
 
