--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -10,11 +10,13 @@ $files = thunar
 $term = ghostty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
+$ewwScript = $HOME/.config/eww/scripts
 
 # rofi App launcher
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
-bind = $mainMod, space, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window &
+bind = $mainMod, space, exec, pkill rofi || rofi -terminal ghostty -show drun -modi drun,filebrowser,run,window &
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
+bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
 # bind = $mainMod, Z, overview:toggle
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
