--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -76,6 +76,7 @@ windowrulev2 = stayfocused, class:^([Ww]ofi)$
 layerrule = blur, logout_dialog
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
+layerrule = xray 1, rofi
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
 layerrule = xray 1, wswid
