--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0E1014)
-$backgroundColTransparent = rgba(0E101460)
-$foreground = rgb(F5E9E2)
-$color0 = rgb(393A3F)
-$color1 = rgb(4488A3)
-$color2 = rgb(937575)
-$color2_shadow = rgba(937575a0)
-$color3 = rgb(41859C)
-$color4 = rgb(A07571)
-$color5 = rgb(638195)
-$color6 = rgb(AA9081)
-$color7 = rgb(E8D7CD)
-$color8 = rgb(A29790)
-$color9 = rgb(1187B6)
-$color10 = rgb(AC7E7E)
-$color11 = rgb(3BA0C2)
-$color12 = rgb(CE938D)
-$color13 = rgb(84ACC6)
-$color14 = rgb(E2C0AC)
-$color15 = rgb(E8D7CD)
+$background = rgb(0C0000)
+$backgroundColTransparent = rgba(0C000060)
+$foreground = rgb(FCF7F5)
+$color0 = rgb(0C0000)
+$color1 = rgb(A17B6C)
+$color2 = rgb(9A8C8C)
+$color2_shadow = rgba(9A8C8Ca0)
+$color3 = rgb(849595)
+$color4 = rgb(AE9388)
+$color5 = rgb(A1ABAA)
+$color6 = rgb(B9AFAA)
+$color7 = rgb(F3ECE8)
+$color8 = rgb(AAA5A2)
+$color9 = rgb(D7A490)
+$color10 = rgb(CDBBBA)
+$color11 = rgb(B0C6C7)
+$color12 = rgb(E8C4B5)
+$color13 = rgb(D7E4E3)
+$color14 = rgb(F7E9E2)
+$color15 = rgb(F3ECE8)
