--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #F5E9E2
-background         #0E1014
+foreground         #FCF7F5
+background         #0C0000
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0E1014
-active_tab_background     #F5E9E2
-inactive_tab_foreground   #F5E9E2
-inactive_tab_background   #0E1014
+active_tab_foreground     #0C0000
+active_tab_background     #FCF7F5
+inactive_tab_foreground   #FCF7F5
+inactive_tab_background   #0C0000
 
-active_border_color   #F5E9E2
-inactive_border_color #0E1014
-bell_border_color     #4488A3
+active_border_color   #FCF7F5
+inactive_border_color #0C0000
+bell_border_color     #A17B6C
 
-color0      #393A3F
-color1		#4488A3
-color2		#937575
-color3		#41859C
-color4		#A07571
-color5		#638195
-color6		#AA9081
-color7		#E8D7CD
-color8		#A29790
-color9		#1187B6
-color10		#AC7E7E
-color11		#3BA0C2
-color12		#CE938D
-color13		#84ACC6
-color14		#E2C0AC
-color15		#E8D7CD
+color0      #0C0000
+color1		#A17B6C
+color2		#9A8C8C
+color3		#849595
+color4		#AE9388
+color5		#A1ABAA
+color6		#B9AFAA
+color7		#F3ECE8
+color8		#AAA5A2
+color9		#D7A490
+color10		#CDBBBA
+color11		#B0C6C7
+color12		#E8C4B5
+color13		#D7E4E3
+color14		#F7E9E2
+color15		#F3ECE8
