--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#393A3F'
-gradient_color_2 = '#937575'
-gradient_color_3 = '#41859C'
-gradient_color_4 = '#638195'
-gradient_color_5 = '#E8D7CD'
-gradient_color_6 = '#CE938D'
-gradient_color_7 = '#84ACC6'
-gradient_color_8 = '#E8D7CD'
+gradient_color_1 = '#0C0000'
+gradient_color_2 = '#9A8C8C'
+gradient_color_3 = '#849595'
+gradient_color_4 = '#A1ABAA'
+gradient_color_5 = '#F3ECE8'
+gradient_color_6 = '#E8C4B5'
+gradient_color_7 = '#D7E4E3'
+gradient_color_8 = '#F3ECE8'
 
 [color]
 
