--- a/.config/hypr/UserConfigs/Laptops.conf
+++ b/.config/hypr/UserConfigs/Laptops.conf
@@ -14,8 +14,8 @@ bind = , xf86Launch3, exec, asusctl led-mode -n #FN+F4 Switch keyboard RGB profi
 bind = , xf86Launch4, exec, asusctl profile -n  #FN+F5 change of fan profiles (Quite, Balance, Performance)
 bind = , xf86MonBrightnessDown, exec, $scriptsDir/Brightness.sh --dec 
 bind = , xf86MonBrightnessUp, exec, $scriptsDir/Brightness.sh --inc 
-bind = $mainMod ALT, K, exec, $scriptsDir/Brightness.sh --inc #brightness up
-bind = $mainMod ALT, J, exec, $scriptsDir/Brightness.sh --dec #brightness down
+binde = $mainMod ALT, K, exec, $scriptsDir/Brightness.sh --inc #brightness up
+binde = $mainMod ALT, J, exec, $scriptsDir/Brightness.sh --dec #brightness down
 bind = , xf86TouchpadToggle, exec, $scriptsDir/TouchPad.sh #disable touchpad
 bind = $mainMod, D, exec, $scriptsDir/TouchPad.sh #disable touchpad
 
@@ -30,13 +30,8 @@ bind = ALT, F6, exec, $scriptsDir/ScreenShot.sh --active # Screenshot active win
 # Suggest you edit below for your laptop display
 # From WIKI This is to disable laptop monitor when lid is closed.
 # consult https://wiki.hyprland.org/hyprland-wiki/pages/Configuring/Binds/#switches
-bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-1, preferred, auto, 1"
-bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-1, disable"
-bindl = , switch:off:Lid Switch,exec,hyprctl keyword monitor "eDP-2, preferred, auto, 1"
-bindl = , switch:on:Lid Switch,exec,hyprctl keyword monitor "eDP-2, disable"
-bindl = , switch:off:Lid Switch,exec, eww close-many wswid sysinfo &
-bindl = , switch:on:Lid Switch,exec, eww open-many wswid sysinfo &
-# bindl = , switch:off:Lid Switch,dpms, off
+bindl = , switch:off:Lid Switch,exec, $scriptsDir/Lid.sh on
+bindl = , switch:on:Lid Switch,exec, $scriptsDir/Lid.sh off
 # bindl = , switch:on:Lid Switch,dpms, on
 
 
