--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -22,6 +22,19 @@ bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files
 
+# bind = , mouse:275, submap, mouse
+# bindr = , mouse:275, submap, reset
+#
+# submap = mouse
+bind = $mainMod Alt, mouse:272, killactive
+bind = $mainMod Alt, mouse:273, fullscreen, 0
+bind = Alt, mouse:272, togglespecialworkspace,
+bind = Alt, mouse:273, togglespecialworkspace, code
+# bindm = , mouse:272, movewindow
+# bindm = , mouse:273, resizewindow
+#
+# bindpr = , mouse:275, submap, reset
+# submap = reset
 
 # bind = $mainMod alt, 1, exec, hyprctl dispatch moveworkspacetomonitor 1 current && hyprctl dispatch workspace 1
 # bind = $mainMod alt, 2, exec, hyprctl dispatch moveworkspacetomonitor 2 current && hyprctl dispatch workspace 2
