--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -25,7 +25,7 @@ windowrule = center,^(pavucontrol)
 
 windowrulev2 = float, initialTitle:(Discord Popout)
 windowrulev2 = pin, initialTitle:(Discord Popout)
-windowrulev2 = size 35% 35%, initialTitle:(Discord Popout)
+windowrulev2 = size 25% 25%, initialTitle:(Discord Popout)
 windowrulev2 = move 100%-w-25 100%-w-25, initialTitle:(Discord Popout)
 # windowrule v2
 windowrulev2 = workspace 1, class:^(thunderbird)$
@@ -58,6 +58,7 @@ windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
 windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.9 0.7, class:^(gedit)$
 windowrulev2 = opacity 0.95 override 0.8 override 0.95 override, class:^(kitty)$
+windowrulev2 = opacity 0.9 override 0.8 override 0.9 override, class:^(com.mitchellh.ghostty)$
 windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
 windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
 windowrulev2 = opacity 0.9 0.7, class:^(VSCodium)$
@@ -65,7 +66,7 @@ windowrulev2 = opacity 0.9 0.7, class:^(yad)$
 windowrulev2 = opacity 0.9 0.7, class:^(com.obsproject.Studio)$
 windowrulev2 = opacity 0.9 0.7, class:^([Aa]udacious)$
 windowrulev2 = immediate, class:^(osu)$
-windowrulev2 = opacity 1.0 0.3, initialTitle:(Discord Popout)
+windowrulev2 = opacity 1.0 0.5, initialTitle:(Discord Popout)
 
 
 # windowrulev2 = stayfocused, class:^([Rr]ofi)$
@@ -80,6 +81,9 @@ layerrule = xray 1, rofi
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
 layerrule = xray 1, wswid
+layerrule = blur, alarm_wid
+layerrule = ignorezero, alarm_wid
+layerrule = xray 1, alarm_wid
 layerrule = blur, windows
 layerrule = ignorezero, windows
 layerrule = xray 1, windows
