--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0C0000)
-$backgroundColTransparent = rgba(0C000060)
-$foreground = rgb(FCF7F5)
-$color0 = rgb(0C0000)
-$color1 = rgb(A17B6C)
-$color2 = rgb(9A8C8C)
-$color2_shadow = rgba(9A8C8Ca0)
-$color3 = rgb(849595)
-$color4 = rgb(AE9388)
-$color5 = rgb(A1ABAA)
-$color6 = rgb(B9AFAA)
-$color7 = rgb(F3ECE8)
-$color8 = rgb(AAA5A2)
-$color9 = rgb(D7A490)
-$color10 = rgb(CDBBBA)
-$color11 = rgb(B0C6C7)
-$color12 = rgb(E8C4B5)
-$color13 = rgb(D7E4E3)
-$color14 = rgb(F7E9E2)
-$color15 = rgb(F3ECE8)
+$background = rgb(121415)
+$backgroundColTransparent = rgba(12141560)
+$foreground = rgb(FEDEC5)
+$color0 = rgb(3C3F40)
+$color1 = rgb(A07A61)
+$color2 = rgb(878470)
+$color2_shadow = rgba(878470a0)
+$color3 = rgb(8C7D64)
+$color4 = rgb(B1704B)
+$color5 = rgb(9C7A59)
+$color6 = rgb(BD7A43)
+$color7 = rgb(F5C8A4)
+$color8 = rgb(AC8C73)
+$color9 = rgb(C1855E)
+$color10 = rgb(999476)
+$color11 = rgb(B39D7B)
+$color12 = rgb(E78B57)
+$color13 = rgb(D0A377)
+$color14 = rgb(FCA25A)
+$color15 = rgb(F5C8A4)
