--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#0C0000'
-gradient_color_2 = '#9A8C8C'
-gradient_color_3 = '#849595'
-gradient_color_4 = '#A1ABAA'
-gradient_color_5 = '#F3ECE8'
-gradient_color_6 = '#E8C4B5'
-gradient_color_7 = '#D7E4E3'
-gradient_color_8 = '#F3ECE8'
+gradient_color_1 = '#3C3F40'
+gradient_color_2 = '#878470'
+gradient_color_3 = '#8C7D64'
+gradient_color_4 = '#9C7A59'
+gradient_color_5 = '#F5C8A4'
+gradient_color_6 = '#E78B57'
+gradient_color_7 = '#D0A377'
+gradient_color_8 = '#F5C8A4'
 
 [color]
 
