--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -22,6 +22,7 @@ env = WAYLAND_DISPLAY,xwayland
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
+env = PATH, $HOME/game/:$PATH
 # env = WLR_NO_HARDWARE_CURSORS,1
 # env = WLR_DRM_NO_ATOMIC,1
 
