--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FCF7F5
-background         #0C0000
+foreground         #FEDEC5
+background         #121415
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0C0000
-active_tab_background     #FCF7F5
-inactive_tab_foreground   #FCF7F5
-inactive_tab_background   #0C0000
+active_tab_foreground     #121415
+active_tab_background     #FEDEC5
+inactive_tab_foreground   #FEDEC5
+inactive_tab_background   #121415
 
-active_border_color   #FCF7F5
-inactive_border_color #0C0000
-bell_border_color     #A17B6C
+active_border_color   #FEDEC5
+inactive_border_color #121415
+bell_border_color     #A07A61
 
-color0      #0C0000
-color1		#A17B6C
-color2		#9A8C8C
-color3		#849595
-color4		#AE9388
-color5		#A1ABAA
-color6		#B9AFAA
-color7		#F3ECE8
-color8		#AAA5A2
-color9		#D7A490
-color10		#CDBBBA
-color11		#B0C6C7
-color12		#E8C4B5
-color13		#D7E4E3
-color14		#F7E9E2
-color15		#F3ECE8
+color0      #3C3F40
+color1		#A07A61
+color2		#878470
+color3		#8C7D64
+color4		#B1704B
+color5		#9C7A59
+color6		#BD7A43
+color7		#F5C8A4
+color8		#AC8C73
+color9		#C1855E
+color10		#999476
+color11		#B39D7B
+color12		#E78B57
+color13		#D0A377
+color14		#FCA25A
+color15		#F5C8A4
