--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -10,7 +10,7 @@ $lock = $scriptsDir/LockScreen.sh
 # exec-once = hyprpm enable Hyprspace
 
 # wallpaper stuff / More wallpaper options below
-exec-once = swww query || swww-daemon
+# exec-once = swww query || (swww init --no-cache && eww open-many wswid sysinfo windows && sleep 1 && $UserScripts/WallpaperRandom.sh)
 # exec-once = $SwwwRandom $wallDIR # random wallpaper switcher every 30 minutes 
 
 # Startup
@@ -28,7 +28,7 @@ exec-once = blueman-applet &
 exec-once = rog-control-center &
 exec-once = eww daemon
 # exec-once = eww open bar --arg mon=0 &
-exec-once = eww open-many wswid sysinfo windows &
+exec-once = $UserScripts/WallpaperRandom.sh && eww open-many wswid sysinfo windows 
 exec-once = $HOME/.config/eww/scripts/openQuickActions.sh
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
