--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -75,31 +75,44 @@ windowrulev2 = stayfocused, class:^([Ww]ofi)$
 # windowrulev2 = forceinput, class:^([Ww]ofi)$
 # layerrule = unset, rofi
 layerrule = blur, logout_dialog
+
 layerrule = blur, rofi
 layerrule = ignorezero, rofi
 layerrule = xray 1, rofi
+
+# eww bar
 layerrule = blur, wswid
 layerrule = ignorezero, wswid
 layerrule = xray 1, wswid
+
 layerrule = blur, alarm_wid
 layerrule = ignorezero, alarm_wid
 layerrule = xray 1, alarm_wid
+
 layerrule = blur, windows
 layerrule = ignorezero, windows
 layerrule = xray 1, windows
+
 layerrule = blur, clock_wid
 layerrule = ignorezero, clock_wid
 layerrule = xray 1, clock_wid
+
 layerrule = blur, sysinfo
 layerrule = xray 1, sysinfo
 layerrule = ignorezero, sysinfo
+
 layerrule = blur, music
 layerrule = ignorezero, music
 layerrule = animation slide, music
-layerrule = blur, waybar
-layerrule = ignorezero, waybar
-layerrule = blur, ewwbar
-layerrule = ignorezero, ewwbar
+
+
+# layerrule = blur, waybar
+# layerrule = ignorezero, waybar
+#
+# layerrule = blur, ewwbar
+# layerrule = ignorezero, ewwbar
+
+layerrule = animation none, swww-daemon
 
 #windowrulev2 = bordercolor rgb(EE4B55) rgb(880808), fullscreen:1
 #windowrulev2 = bordercolor rgb(282737) rgb(1E1D2D), floating:1
