--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FEDEC5
-background         #121415
+foreground         #FFF2DE
+background         #0D0F11
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #121415
-active_tab_background     #FEDEC5
-inactive_tab_foreground   #FEDEC5
-inactive_tab_background   #121415
+active_tab_foreground     #0D0F11
+active_tab_background     #FFF2DE
+inactive_tab_foreground   #FFF2DE
+inactive_tab_background   #0D0F11
 
-active_border_color   #FEDEC5
-inactive_border_color #121415
-bell_border_color     #A07A61
+active_border_color   #FFF2DE
+inactive_border_color #0D0F11
+bell_border_color     #B27053
 
-color0      #3C3F40
-color1		#A07A61
-color2		#878470
-color3		#8C7D64
-color4		#B1704B
-color5		#9C7A59
-color6		#BD7A43
-color7		#F5C8A4
-color8		#AC8C73
-color9		#C1855E
-color10		#999476
-color11		#B39D7B
-color12		#E78B57
-color13		#D0A377
-color14		#FCA25A
-color15		#F5C8A4
+color0      #383A3C
+color1		#B27053
+color2		#B66A5E
+color3		#4F8571
+color4		#B48957
+color5		#BA8E72
+color6		#BEA479
+color7		#F6E5C8
+color8		#ACA08C
+color9		#D66A3B
+color10		#E36D5A
+color11		#5DA98D
+color12		#F0B674
+color13		#F8BD98
+color14		#FEDBA1
+color15		#F6E5C8
