--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#3C3F40'
-gradient_color_2 = '#878470'
-gradient_color_3 = '#8C7D64'
-gradient_color_4 = '#9C7A59'
-gradient_color_5 = '#F5C8A4'
-gradient_color_6 = '#E78B57'
-gradient_color_7 = '#D0A377'
-gradient_color_8 = '#F5C8A4'
+gradient_color_1 = '#383A3C'
+gradient_color_2 = '#B66A5E'
+gradient_color_3 = '#4F8571'
+gradient_color_4 = '#BA8E72'
+gradient_color_5 = '#F6E5C8'
+gradient_color_6 = '#F0B674'
+gradient_color_7 = '#F8BD98'
+gradient_color_8 = '#F6E5C8'
 
 [color]
 
