--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -154,7 +154,7 @@ misc {
   mouse_move_enables_dpms = true
   vrr = 1
   animate_manual_resizes = true
-  # background_color = 0xff1e1e2e
+  background_color = 0xff000000
   # enable_swallow = true
   # no_direct_scanout = true #for fullscreen games
   focus_on_activate = false
