--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(121415)
-$backgroundColTransparent = rgba(12141560)
-$foreground = rgb(FEDEC5)
-$color0 = rgb(3C3F40)
-$color1 = rgb(A07A61)
-$color2 = rgb(878470)
-$color2_shadow = rgba(878470a0)
-$color3 = rgb(8C7D64)
-$color4 = rgb(B1704B)
-$color5 = rgb(9C7A59)
-$color6 = rgb(BD7A43)
-$color7 = rgb(F5C8A4)
-$color8 = rgb(AC8C73)
-$color9 = rgb(C1855E)
-$color10 = rgb(999476)
-$color11 = rgb(B39D7B)
-$color12 = rgb(E78B57)
-$color13 = rgb(D0A377)
-$color14 = rgb(FCA25A)
-$color15 = rgb(F5C8A4)
+$background = rgb(0D0F11)
+$backgroundColTransparent = rgba(0D0F1160)
+$foreground = rgb(FFF2DE)
+$color0 = rgb(383A3C)
+$color1 = rgb(B27053)
+$color2 = rgb(B66A5E)
+$color2_shadow = rgba(B66A5Ea0)
+$color3 = rgb(4F8571)
+$color4 = rgb(B48957)
+$color5 = rgb(BA8E72)
+$color6 = rgb(BEA479)
+$color7 = rgb(F6E5C8)
+$color8 = rgb(ACA08C)
+$color9 = rgb(D66A3B)
+$color10 = rgb(E36D5A)
+$color11 = rgb(5DA98D)
+$color12 = rgb(F0B674)
+$color13 = rgb(F8BD98)
+$color14 = rgb(FEDBA1)
+$color15 = rgb(F6E5C8)
