--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -24,12 +24,13 @@ exec-once = $scriptsDir/Polkit.sh
 # exec-once = waybar &
 exec-once = nm-applet --indicator &
 exec-once = swaync &
-exec-once = blueman-applet & 
-exec-once = rog-control-center &
-exec-once = eww daemon
+exec-once = eww daemon &
 # exec-once = eww open bar --arg mon=0 &
 exec-once = $UserScripts/WallpaperRandom.sh && eww open-many wswid sysinfo windows 
 exec-once = $HOME/.config/eww/scripts/openQuickActions.sh
+exec-once = blueman-applet &
+exec-once = blueman-applet &
+exec-once = localsend --hidden &
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
