--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -28,8 +28,8 @@ bind = $mainMod, T, exec, $files
 # submap = mouse
 bind = $mainMod Alt, mouse:272, killactive
 bind = $mainMod Alt, mouse:273, fullscreen, 0
-bind = Alt, mouse:272, togglespecialworkspace,
-bind = Alt, mouse:273, togglespecialworkspace, code
+bind = $mainMod , mouse:274, exec, pkill rofi || rofi -terminal ghostty -show drun -modi drun,filebrowser,run,window &
+
 # bindm = , mouse:272, movewindow
 # bindm = , mouse:273, resizewindow
 #
