--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0D0F11)
-$backgroundColTransparent = rgba(0D0F1160)
-$foreground = rgb(FFF2DE)
-$color0 = rgb(383A3C)
-$color1 = rgb(B27053)
-$color2 = rgb(B66A5E)
-$color2_shadow = rgba(B66A5Ea0)
-$color3 = rgb(4F8571)
-$color4 = rgb(B48957)
-$color5 = rgb(BA8E72)
-$color6 = rgb(BEA479)
-$color7 = rgb(F6E5C8)
-$color8 = rgb(ACA08C)
-$color9 = rgb(D66A3B)
-$color10 = rgb(E36D5A)
-$color11 = rgb(5DA98D)
-$color12 = rgb(F0B674)
-$color13 = rgb(F8BD98)
-$color14 = rgb(FEDBA1)
-$color15 = rgb(F6E5C8)
+$background = rgb(080003)
+$backgroundColTransparent = rgba(08000360)
+$foreground = rgb(FEE8CE)
+$color0 = rgb(0A0003)
+$color1 = rgb(9D697C)
+$color2 = rgb(717C7B)
+$color2_shadow = rgba(717C7Ba0)
+$color3 = rgb(B36372)
+$color4 = rgb(B7665C)
+$color5 = rgb(B97A59)
+$color6 = rgb(BC8D56)
+$color7 = rgb(F5D5B1)
+$color8 = rgb(AB957C)
+$color9 = rgb(B35E7D)
+$color10 = rgb(778987)
+$color11 = rgb(E36E83)
+$color12 = rgb(F4887B)
+$color13 = rgb(F7A277)
+$color14 = rgb(FBBC73)
+$color15 = rgb(F5D5B1)
