--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,36 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FFF2DE
-background         #0D0F11
+foreground         #FEE8CE
+background         #080003
 background_opacity 0.7
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0D0F11
-active_tab_background     #FFF2DE
-inactive_tab_foreground   #FFF2DE
-inactive_tab_background   #0D0F11
+active_tab_foreground     #080003
+active_tab_background     #FEE8CE
+inactive_tab_foreground   #FEE8CE
+inactive_tab_background   #080003
 
-active_border_color   #FFF2DE
-inactive_border_color #0D0F11
-bell_border_color     #B27053
+active_border_color   #FEE8CE
+inactive_border_color #080003
+bell_border_color     #9D697C
 
-color0      #383A3C
-color1		#B27053
-color2		#B66A5E
-color3		#4F8571
-color4		#B48957
-color5		#BA8E72
-color6		#BEA479
-color7		#F6E5C8
-color8		#ACA08C
-color9		#D66A3B
-color10		#E36D5A
-color11		#5DA98D
-color12		#F0B674
-color13		#F8BD98
-color14		#FEDBA1
-color15		#F6E5C8
+color0      #0A0003
+color1		#9D697C
+color2		#717C7B
+color3		#B36372
+color4		#B7665C
+color5		#B97A59
+color6		#BC8D56
+color7		#F5D5B1
+color8		#AB957C
+color9		#B35E7D
+color10		#778987
+color11		#E36E83
+color12		#F4887B
+color13		#F7A277
+color14		#FBBC73
+color15		#F5D5B1
