--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#383A3C'
-gradient_color_2 = '#B66A5E'
-gradient_color_3 = '#4F8571'
-gradient_color_4 = '#BA8E72'
-gradient_color_5 = '#F6E5C8'
-gradient_color_6 = '#F0B674'
-gradient_color_7 = '#F8BD98'
-gradient_color_8 = '#F6E5C8'
+gradient_color_1 = '#0A0003'
+gradient_color_2 = '#717C7B'
+gradient_color_3 = '#B36372'
+gradient_color_4 = '#B97A59'
+gradient_color_5 = '#F5D5B1'
+gradient_color_6 = '#F4887B'
+gradient_color_7 = '#F7A277'
+gradient_color_8 = '#F5D5B1'
 
 [color]
 
