--- a/.config/wallust/wallust.toml
+++ b/.config/wallust/wallust.toml
@@ -1,22 +1,7 @@
 # wallust 3.0 beta.*
 
-backend = "thumb"
-color_space = "lch"
-
-# NOTE: All filters will fill 16 colors (from color0 to color15), 16 color
-#       variations are the 'ilusion' of more colors by opaquing color1 to color5.
-# Use the most prominent colors in a way that makes sense, a scheme:
-#  * dark        - 8 dark colors, dark background and light contrast
-#  * dark16      - Same as `dark` but uses the 16 colors trick
-#  * harddark    - Same as `dark` with hard hue colors
-#  * harddark16  - Harddark with 16 color variation
-#  * light       - Light bg, dark fg
-#  * light16     - Same as `light` but uses the 16 color trick
-#  * softdark    - Variant of softlight, uses the lightest colors and a dark
-#                   background (could be interpreted as `dark` inversed)
-#  * softdark16  - softdark with 16 color variation
-#  * softlight   - Light with soft pastel colors, counterpart of `harddark`
-#  * softlight16 - softlight with 16 color variation
+backend = "fastresize"
+# color_space = "lch"
 palette = "dark16"
 
 # Difference between similar colors, used by the colorspace:
@@ -25,7 +10,7 @@ palette = "dark16"
 #  2 - 10     Perceptible at a glance.
 #  11 - 49    Colors are more similar than opposite
 #  100        Colors are exact opposite
-threshold = 6
+threshold = 8
 check_contrast = true
 
 [templates]
