--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -18,7 +18,7 @@ env = GDK_DISABLE,vulkan
 # env = GTK_IM_MODULE,fcitx
 # env = QT_IM_MODULE,fcitx
 # env = XMODIFIERS,@im=fcitx
-env = WAYLAND_DISPLAY,xwayland
+# env = WAYLAND_DISPLAY,xwayland
 env = HYPRCURSOR_THEME,Bibata-Modern-Ice
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_SIZE,24
@@ -28,7 +28,7 @@ env = PATH, $HOME/game/:$PATH
 
 # vulkan
 env = WLR_RENDERER,vulkan
-# env = AQ_DRM_DEVICES,/dev/dri/card0:/dev/dri/card1
+env = AQ_DRM_DEVICES,/dev/dri/card2:/dev/dri/card1
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
