--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -7,14 +7,15 @@
 
 $mainMod = SUPER
 $files = thunar
-$term = ghostty
+# $term = ghostty
+$term = kitty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
 $ewwScript = $HOME/.config/eww/scripts
 
 # rofi App launcher
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
-bind = $mainMod, space, exec, pkill rofi || rofi -terminal ghostty -show drun -modi drun,filebrowser,run,window &
+bind = $mainMod, space, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
 # bind = $mainMod, Z, overview:toggle
@@ -28,7 +29,7 @@ bind = $mainMod, T, exec, $files
 # submap = mouse
 bind = $mainMod Alt, mouse:272, killactive
 bind = $mainMod Alt, mouse:273, fullscreen, 0
-bind = $mainMod , mouse:274, exec, pkill rofi || rofi -terminal ghostty -show drun -modi drun,filebrowser,run,window &
+bind = $mainMod , mouse:274, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
 
 # bindm = , mouse:272, movewindow
 # bindm = , mouse:273, resizewindow
