--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -23,6 +23,9 @@ windowrule = pseudo,fcitx
 
 windowrule = center,^(pavucontrol) 
 
+windowrulev2 = float, workspace:8
+windowrulev2 = center 0.6, workspace:8
+
 windowrulev2 = float, initialTitle:(Discord Popout)
 windowrulev2 = pin, initialTitle:(Discord Popout)
 windowrulev2 = size 25% 25%, initialTitle:(Discord Popout)
@@ -51,13 +54,14 @@ windowrulev2 = workspace 9 silent, class:^([Aa]udacious)$
 windowrulev2 = opacity 0.9 0.8, class:^(vesktop)$
 windowrulev2 = opacity 0.9 0.8, title:^(WhatsApp Web)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser)$
+windowrulev2 = opacity 0.97 0.7, class:^(zen)$
 windowrulev2 = opacity 0.9 0.7, class:^(Brave-browser-dev)$
 windowrulev2 = opacity 0.9 0.7, class:^(firefox)$
 windowrulev2 = opacity 0.9 0.7, class:^(Firefox-esr)$
 windowrulev2 = opacity 0.9 0.8, class:^([Tt]hunar)$
 windowrulev2 = opacity 0.8 0.6, class:^(pcmanfm-qt)$
 windowrulev2 = opacity 0.9 0.7, class:^(gedit)$
-windowrulev2 = opacity 0.95 override 0.8 override 0.95 override, class:^(kitty)$
+windowrulev2 = opacity 0.97 override 0.9 override 0.97 override, class:^(kitty)$
 windowrulev2 = opacity 0.9 override 0.8 override 0.9 override, class:^(com.mitchellh.ghostty)$
 windowrulev2 = opacity 0.9 0.7, class:^(mousepad)$
 windowrulev2 = opacity 0.9 0.7, class:^(codium-url-handler)$
@@ -77,8 +81,7 @@ windowrulev2 = stayfocused, class:^([Ww]ofi)$
 layerrule = blur, logout_dialog
 
 layerrule = blur, rofi
-layerrule = ignorezero, rofi
-layerrule = xray 1, rofi
+# layerrule = xray 1, rofi
 
 # eww bar
 layerrule = blur, wswid
