--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -67,7 +67,7 @@ bind = , xf86audioraisevolume, exec, $scriptsDir/Volume.sh --inc #volume up
 bind = , xf86audiolowervolume, exec, $scriptsDir/Volume.sh --dec #volume down
 bind = , xf86AudioMicMute, exec, $scriptsDir/Volume.sh --toggle-mic #mute mic
 bind = , xf86audiomute, exec, $scriptsDir/Volume.sh --toggle
-bind = , xf86Sleep, exec, systemctl suspend  # sleep button 
+# bind = , xf86Sleep, exec, systemctl suspend  # sleep button 
 bind = , xf86Rfkill, exec, $scriptsDir/AirplaneMode.sh #Airplane mode
 
 # media controls using keyboards
