--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(080003)
-$backgroundColTransparent = rgba(08000360)
-$foreground = rgb(FEE8CE)
-$color0 = rgb(0A0003)
-$color1 = rgb(9D697C)
-$color2 = rgb(717C7B)
-$color2_shadow = rgba(717C7Ba0)
-$color3 = rgb(B36372)
-$color4 = rgb(B7665C)
-$color5 = rgb(B97A59)
-$color6 = rgb(BC8D56)
-$color7 = rgb(F5D5B1)
-$color8 = rgb(AB957C)
-$color9 = rgb(B35E7D)
-$color10 = rgb(778987)
-$color11 = rgb(E36E83)
-$color12 = rgb(F4887B)
-$color13 = rgb(F7A277)
-$color14 = rgb(FBBC73)
-$color15 = rgb(F5D5B1)
+$background = rgb(191B21)
+$backgroundColTransparent = rgba(191B2160)
+$foreground = rgb(FEF8FB)
+$color0 = rgb(44464E)
+$color1 = rgb(688AB5)
+$color2 = rgb(7F8893)
+$color2_shadow = rgba(7F8893a0)
+$color3 = rgb(9E89AF)
+$color4 = rgb(8B95B8)
+$color5 = rgb(A0A6AD)
+$color6 = rgb(BDB0B6)
+$color7 = rgb(F5ECF1)
+$color8 = rgb(ACA5A8)
+$color9 = rgb(75A7E6)
+$color10 = rgb(A1ADBC)
+$color11 = rgb(D2B7E9)
+$color12 = rgb(B9C7F6)
+$color13 = rgb(D6DDE6)
+$color14 = rgb(FCEAF3)
+$color15 = rgb(F5ECF1)
