--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,36 +16,6 @@ cursor_blink_interval 0.7
 
 confirm_os_window_close 0
 
-foreground         #FEE8CE
-background         #080003
-background_opacity 0.7
-cursor             #ff9050
+background_opacity 0.95
 
-selection_foreground #202020
-selection_background #ff9050
-
-active_tab_foreground     #080003
-active_tab_background     #FEE8CE
-inactive_tab_foreground   #FEE8CE
-inactive_tab_background   #080003
-
-active_border_color   #FEE8CE
-inactive_border_color #080003
-bell_border_color     #9D697C
-
-color0      #0A0003
-color1		#9D697C
-color2		#717C7B
-color3		#B36372
-color4		#B7665C
-color5		#B97A59
-color6		#BC8D56
-color7		#F5D5B1
-color8		#AB957C
-color9		#B35E7D
-color10		#778987
-color11		#E36E83
-color12		#F4887B
-color13		#F7A277
-color14		#FBBC73
-color15		#F5D5B1
+include theme.conf
