--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#0A0003'
-gradient_color_2 = '#717C7B'
-gradient_color_3 = '#B36372'
-gradient_color_4 = '#B97A59'
-gradient_color_5 = '#F5D5B1'
-gradient_color_6 = '#F4887B'
-gradient_color_7 = '#F7A277'
-gradient_color_8 = '#F5D5B1'
+gradient_color_1 = '#44464E'
+gradient_color_2 = '#7F8893'
+gradient_color_3 = '#9E89AF'
+gradient_color_4 = '#A0A6AD'
+gradient_color_5 = '#F5ECF1'
+gradient_color_6 = '#B9C7F6'
+gradient_color_7 = '#D6DDE6'
+gradient_color_8 = '#F5ECF1'
 
 [color]
 
