--- a/.config/hypr/UserConfigs/Startup_Apps.conf
+++ b/.config/hypr/UserConfigs/Startup_Apps.conf
@@ -23,13 +23,13 @@ exec-once = $scriptsDir/Polkit.sh
 # startup apps
 # exec-once = waybar &
 exec-once = nm-applet --indicator &
+exec-once = blueman-applet &
+exec-once = sleep 1 && blueman-tray &
 exec-once = swaync &
 exec-once = eww daemon &
 # exec-once = eww open bar --arg mon=0 &
 exec-once = $UserScripts/WallpaperRandom.sh && eww open-many wswid sysinfo windows 
 exec-once = $HOME/.config/eww/scripts/openQuickActions.sh
-exec-once = blueman-applet &
-exec-once = blueman-applet &
 exec-once = localsend --hidden &
 
 exec-once = hyprctl setcursor 'Bibata-Modern-Ice' 24
