--- a/.config/hypr/UserConfigs/UserSettings.conf
+++ b/.config/hypr/UserConfigs/UserSettings.conf
@@ -13,14 +13,14 @@ dwindle {
   pseudotile = true
   preserve_split = true
   force_split = 2
-  special_scale_factor = 1
+  special_scale_factor = 0.97
 }
 
 master {
   new_status = master
   new_on_top=1
   mfact = 0.8
-  special_scale_factor = 1
+  special_scale_factor = 0.97
 }
 
 general {
@@ -35,10 +35,10 @@ general {
 
   layout = dwindle
 
-  # snap {
-  #   enabled = true
-  #   border_overlap = true
-  # }
+  snap {
+    enabled = true
+    border_overlap = false
+  }
 }
 
 group {
@@ -60,8 +60,8 @@ decoration {
   dim_strength = 0.05
 
   shadow {
-    enabled=false
-    range=6
+    enabled=true
+    range=4
     render_power = 1
     color = $color2_shadow
     color_inactive = $backgroundColTransparent
@@ -103,7 +103,7 @@ animations {
   animation = fade, 1, 5, overshot
   animation = fadeSwitch, 1, 14, ease
   animation = workspaces, 1, 4, emp, slidefade 25%
-  animation = specialWorkspace, 1, 3, emp, slidefadevert
+  animation = specialWorkspace, 1, 4, emp, slidefadevert -25%
   animation = windows, 1, 3, emp, popin
 }
 
