--- a/.config/ags/Makefile
+++ b/.config/ags/Makefile
@@ -2,4 +2,4 @@ SRC_DIR	= .
 SRC		= $(shell find $(SRC_DIR) \( -name '*.ts' -o -name '*.tsx' -o -name '*.scss' \) )
 
 run:
-	@echo "$(SRC)" | sed "s/ /\n/g" | entr -r -s "ags run --gtk4"
+	@echo "$(SRC)" | sed "s/ /\n/g" | entr -r -s "echo -e '\nStarted new instance of ags!\n' && ags run --gtk4"
