--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -81,6 +81,8 @@ windowrulev2 = stayfocused, class:^([Ww]ofi)$
 layerrule = blur, logout_dialog
 
 layerrule = blur, rofi
+layerrule = blur, launcher
+layerrule = blur, wallpaperPicker
 # layerrule = xray 1, rofi
 
 # eww bar
