--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -60,6 +60,7 @@ bind = $mainMod, O, layoutmsg, togglesplit
 
 # group
 # bind = $mainMod, G, togglegroup
+bind = $mainMod, G, exec, ags toggle launcher
 # bind = ALT, tab, changegroupactive  #change focus to another window  
 
 # Special Keys / Hot Keys
@@ -89,10 +90,6 @@ bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active #screenshot the app
 bind = $mainMod ALT, S, exec, $scriptsDir/ScreenShot.sh --swappy
 
 # Resize windows
-bind = $mainMod, U, setfloating
-bind = $mainMod, U, resizeactive,exact 35% 35%
-bind = $mainMod, U, moveactive,exact 65% 65%
-bind = $mainMod, U, moveactive,-30 -30
 binde = $mainMod SHIFT, left, resizeactive,-50 0
 binde = $mainMod SHIFT, right, resizeactive,50 0
 binde = $mainMod SHIFT, up, resizeactive,0 -50
