--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -19,10 +19,15 @@ listener {
 
 # turn off screen faster if session is already locked
 # (disabled by default)
+# listener {
+#     timeout = 30                            # 30 seconds
+#     on-timeout = pidof hyprlock && hyprctl dispatch dpms off # turns off the screen if hyprlock is active
+#     on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
+# }
+
 listener {
-    timeout = 30                            # 30 seconds
-    on-timeout = pidof hyprlock && hyprctl dispatch dpms off # turns off the screen if hyprlock is active
-    on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
+    timeout = 30                           # 30 seconds
+    on-timeout = pidof hyprlock && systemctl suspend # turns off the screen if hyprlock is active
 }
 
 # Warn
@@ -54,8 +59,8 @@ listener {
 }
 
 # Suspend # disabled by default
-# listener {
-   # timeout = 1200                            # 20 min
-   # on-timeout = systemctl suspend # command to run when timeout has passed
+listener {
+   timeout = 900                            # 20 min
+   on-timeout = systemctl suspend # command to run when timeout has passed
     # on-resume = notify-send "Welcome back to your desktop!"  # command to run when activity is detected after timeout has fired.
-# }
+}
