--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(191B21)
-$backgroundColTransparent = rgba(191B2160)
-$foreground = rgb(FEF8FB)
-$color0 = rgb(44464E)
-$color1 = rgb(688AB5)
-$color2 = rgb(7F8893)
-$color2_shadow = rgba(7F8893a0)
-$color3 = rgb(9E89AF)
-$color4 = rgb(8B95B8)
-$color5 = rgb(A0A6AD)
-$color6 = rgb(BDB0B6)
-$color7 = rgb(F5ECF1)
-$color8 = rgb(ACA5A8)
-$color9 = rgb(75A7E6)
-$color10 = rgb(A1ADBC)
-$color11 = rgb(D2B7E9)
-$color12 = rgb(B9C7F6)
-$color13 = rgb(D6DDE6)
-$color14 = rgb(FCEAF3)
-$color15 = rgb(F5ECF1)
+$background = rgb(0E0E10)
+$backgroundColTransparent = rgba(0E0E1060)
+$foreground = rgb(FEF9F8)
+$color0 = rgb(38393B)
+$color1 = rgb(827E85)
+$color2 = rgb(9C7153)
+$color2_shadow = rgba(9C7153a0)
+$color3 = rgb(958577)
+$color4 = rgb(848F91)
+$color5 = rgb(9797A4)
+$color6 = rgb(BCB3B1)
+$color7 = rgb(F5EEED)
+$color8 = rgb(ABA7A6)
+$color9 = rgb(A59FA9)
+$color10 = rgb(D0976E)
+$color11 = rgb(C7B19E)
+$color12 = rgb(B0BFC1)
+$color13 = rgb(C9C9DA)
+$color14 = rgb(FBEEEC)
+$color15 = rgb(F5EEED)
