--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,32 +1,32 @@
-foreground         #FEF8FB
-background         #191B21
+foreground         #FEF9F8
+background         #0E0E10
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #191B21
-active_tab_background     #FEF8FB
-inactive_tab_foreground   #FEF8FB
-inactive_tab_background   #191B21
+active_tab_foreground     #0E0E10
+active_tab_background     #FEF9F8
+inactive_tab_foreground   #FEF9F8
+inactive_tab_background   #0E0E10
 
-active_border_color   #FEF8FB
-inactive_border_color #191B21
-bell_border_color     #688AB5
+active_border_color   #FEF9F8
+inactive_border_color #0E0E10
+bell_border_color     #827E85
 
-color0      #44464E
-color1		#688AB5
-color2		#7F8893
-color3		#9E89AF
-color4		#8B95B8
-color5		#A0A6AD
-color6		#BDB0B6
-color7		#F5ECF1
-color8		#ACA5A8
-color9		#75A7E6
-color10		#A1ADBC
-color11		#D2B7E9
-color12		#B9C7F6
-color13		#D6DDE6
-color14		#FCEAF3
-color15		#F5ECF1
+color0      #38393B
+color1		#827E85
+color2		#9C7153
+color3		#958577
+color4		#848F91
+color5		#9797A4
+color6		#BCB3B1
+color7		#F5EEED
+color8		#ABA7A6
+color9		#A59FA9
+color10		#D0976E
+color11		#C7B19E
+color12		#B0BFC1
+color13		#C9C9DA
+color14		#FBEEEC
+color15		#F5EEED
