--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -18,6 +18,8 @@ $ewwScript = $HOME/.config/eww/scripts
 bind = $mainMod, space, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
+bind = $mainMod, Z, exec, ags toggle launcher
+# bind = $mainMod, Z, exec, ags toggle wallpaperPicker
 # bind = $mainMod, Z, overview:toggle
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
