--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -15,12 +15,17 @@ $ewwScript = $HOME/.config/eww/scripts
 
 # rofi App launcher
 # bind = $mainMod, D, exec, pkill wofi || wofi --show drun
-bind = $mainMod, space, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
+# bind = $mainMod, space, exec, pkill rofi || rofi -terminal kitty -show drun -modi drun,filebrowser,run,window &
+bind = $mainMod, space, exec, ags toggle launcher
 bind = $mainMod, V, exec, pkill pavucontrol || pavucontrol &
 bind = $mainMod, G, exec, $ewwScript/hyprsunsetToggle.sh
-bind = $mainMod, Z, exec, ags toggle launcher
-# bind = $mainMod, Z, exec, ags toggle wallpaperPicker
+bind = $mainMod, Z, exec, ags toggle launcher --instance debug
 # bind = $mainMod, Z, overview:toggle
+
+# bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
+bind = $mainMod, W, exec, ags toggle wallpaperPicker
+bind = $mainMod SHIFT, W, exec, swww query && swww kill || swww-daemon &
+bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
 
 bind = $mainMod, Return, exec, $term  # Launch terminal
 bind = $mainMod, T, exec, $files
