--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,20 +1,20 @@
-$background = rgb(0E0E10)
-$backgroundColTransparent = rgba(0E0E1060)
-$foreground = rgb(FEF9F8)
-$color0 = rgb(38393B)
-$color1 = rgb(827E85)
-$color2 = rgb(9C7153)
-$color2_shadow = rgba(9C7153a0)
-$color3 = rgb(958577)
-$color4 = rgb(848F91)
-$color5 = rgb(9797A4)
-$color6 = rgb(BCB3B1)
-$color7 = rgb(F5EEED)
-$color8 = rgb(ABA7A6)
-$color9 = rgb(A59FA9)
-$color10 = rgb(D0976E)
-$color11 = rgb(C7B19E)
-$color12 = rgb(B0BFC1)
-$color13 = rgb(C9C9DA)
-$color14 = rgb(FBEEEC)
-$color15 = rgb(F5EEED)
+$background = rgb(0D0F11)
+$backgroundColTransparent = rgba(0D0F1160)
+$foreground = rgb(FFF3DE)
+$color0 = rgb(383A3C)
+$color1 = rgb(9C7363)
+$color2 = rgb(B4675C)
+$color2_shadow = rgba(B4675Ca0)
+$color3 = rgb(648676)
+$color4 = rgb(937A5C)
+$color5 = rgb(BA8E72)
+$color6 = rgb(BEA57A)
+$color7 = rgb(F6E5C8)
+$color8 = rgb(ACA08C)
+$color9 = rgb(AD6B50)
+$color10 = rgb(E06757)
+$color11 = rgb(85B29D)
+$color12 = rgb(C4A37A)
+$color13 = rgb(F8BD98)
+$color14 = rgb(FEDCA2)
+$color15 = rgb(F6E5C8)
