--- a/.config/cava/config
+++ b/.config/cava/config
@@ -143,14 +143,14 @@ source = auto
 gradient = 1
 
 gradient_count = 8
-gradient_color_1 = '#38393B'
-gradient_color_2 = '#9C7153'
-gradient_color_3 = '#958577'
-gradient_color_4 = '#9797A4'
-gradient_color_5 = '#F5EEED'
-gradient_color_6 = '#B0BFC1'
-gradient_color_7 = '#C9C9DA'
-gradient_color_8 = '#F5EEED'
+gradient_color_1 = '#383A3C'
+gradient_color_2 = '#B4675C'
+gradient_color_3 = '#648676'
+gradient_color_4 = '#BA8E72'
+gradient_color_5 = '#F6E5C8'
+gradient_color_6 = '#C4A37A'
+gradient_color_7 = '#F8BD98'
+gradient_color_8 = '#F6E5C8'
 
 [color]
 
