--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -11,19 +11,13 @@ general {
     ignore_dbus_inhibit = false             # whether to ignore dbus-sent idle-inhibit requests (used by e.g. firefox or steam)
 }
 
-listener {
-    timeout = 30                            # 30 seconds
-    on-timeout = $HOME/.config/hypr/scripts/BrightnessKbd.sh --off
-    on-resume = $HOME/.config/hypr/scripts/BrightnessKbd.sh --on
-}
-
 # turn off screen faster if session is already locked
 # (disabled by default)
-# listener {
-#     timeout = 30                            # 30 seconds
-#     on-timeout = pidof hyprlock && hyprctl dispatch dpms off # turns off the screen if hyprlock is active
-#     on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
-# }
+listener {
+    timeout = 30                            # 30 seconds
+    on-timeout = pidof hyprlock && hyprctl dispatch dpms off # turns off the screen if hyprlock is active
+    on-resume = pidof hyprlock && hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
+}
 
 listener {
     timeout = 30                           # 30 seconds
