--- a/.config/kitty/theme.conf
+++ b/.config/kitty/theme.conf
@@ -1,32 +1,32 @@
-foreground         #FEF9F8
-background         #0E0E10
+foreground         #FFF3DE
+background         #0D0F11
 cursor             #ff9050
 
 selection_foreground #202020
 selection_background #ff9050
 
-active_tab_foreground     #0E0E10
-active_tab_background     #FEF9F8
-inactive_tab_foreground   #FEF9F8
-inactive_tab_background   #0E0E10
+active_tab_foreground     #0D0F11
+active_tab_background     #FFF3DE
+inactive_tab_foreground   #FFF3DE
+inactive_tab_background   #0D0F11
 
-active_border_color   #FEF9F8
-inactive_border_color #0E0E10
-bell_border_color     #827E85
+active_border_color   #FFF3DE
+inactive_border_color #0D0F11
+bell_border_color     #9C7363
 
-color0      #38393B
-color1		#827E85
-color2		#9C7153
-color3		#958577
-color4		#848F91
-color5		#9797A4
-color6		#BCB3B1
-color7		#F5EEED
-color8		#ABA7A6
-color9		#A59FA9
-color10		#D0976E
-color11		#C7B19E
-color12		#B0BFC1
-color13		#C9C9DA
-color14		#FBEEEC
-color15		#F5EEED
+color0      #383A3C
+color1		#9C7363
+color2		#B4675C
+color3		#648676
+color4		#937A5C
+color5		#BA8E72
+color6		#BEA57A
+color7		#F6E5C8
+color8		#ACA08C
+color9		#AD6B50
+color10		#E06757
+color11		#85B29D
+color12		#C4A37A
+color13		#F8BD98
+color14		#FEDCA2
+color15		#F6E5C8
